--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	-->
         <groupId>org.hl7.fhir.testcases</groupId>
 	<artifactId>fhir-test-cases</artifactId>
-	<version>1.1.14-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>HL7 FHIR Test Cases</name>
@@ -33,6 +33,13 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+                        <id>oss-release</id>
+                        <url>https://oss.sonatype.org/content/repositories/releases/</url>
+                        <snapshots>
+                                <enabled>false</enabled>
+                        </snapshots>
+                </repository>
 	</repositories>
 
 	<dependencies>
