Chaning distribution management.

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
                 </repository>
 	</repositories>
 
+	<distributionManagement>
+  		<snapshotRepository>
+    			<id>ossrh</id>
+    			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  		</snapshotRepository>
+  		<repository>
+    			<id>ossrh</id>
+    			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+  		</repository>
+	</distributionManagement>
+
 	<dependencies>
 		<!-- Use logback for tests -->
 		<dependency>
@@ -73,6 +84,17 @@
 				</configuration>
 				<dependencies>
 				</dependencies>
+			</plugin>
+			<plugin>
+  				<groupId>org.sonatype.plugins</groupId>
+  				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+				        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+  				</configuration>
 			</plugin>
 		</plugins>
 		<resources>
