--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	-->
         <groupId>org.hl7.fhir.testcases</groupId>
 	<artifactId>fhir-test-cases</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.23</version>
 	<packaging>jar</packaging>
 
 	<name>HL7 FHIR Test Cases</name>
@@ -25,22 +25,22 @@
 		<url>http://hl7.org</url>
 	</organization>
 
-	<repositories>
-		<repository>
-			<id>oss-snapshot</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-                        <id>oss-release</id>
-                        <url>https://oss.sonatype.org/content/repositories/releases/</url>
-                        <snapshots>
-                                <enabled>false</enabled>
-                        </snapshots>
-                </repository>
-	</repositories>
+<!--	<repositories>-->
+<!--		<repository>-->
+<!--			<id>oss-snapshot</id>-->
+<!--			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>-->
+<!--			<snapshots>-->
+<!--				<enabled>true</enabled>-->
+<!--			</snapshots>-->
+<!--		</repository>-->
+<!--		<repository>-->
+<!--                        <id>oss-release</id>-->
+<!--                        <url>https://oss.sonatype.org/content/repositories/releases/</url>-->
+<!--                        <snapshots>-->
+<!--                                <enabled>false</enabled>-->
+<!--                        </snapshots>-->
+<!--                </repository>-->
+<!--	</repositories>-->
 
 	<distributionManagement>
   		<snapshotRepository>
@@ -86,14 +86,28 @@
 				</dependencies>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
   				<groupId>org.sonatype.plugins</groupId>
   				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.7</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
-				        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
   				</configuration>
 			</plugin>
 		</plugins>
