--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	-->
         <groupId>org.hl7.fhir.testcases</groupId>
 	<artifactId>fhir-test-cases</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.4</version>
 	<packaging>jar</packaging>
 
 	<name>HL7 FHIR Test Cases</name>
