--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	-->
         <groupId>org.hl7.fhir.testcases</groupId>
 	<artifactId>fhir-test-cases</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
+	<version>0.0.11</version>
 	<packaging>jar</packaging>
 
 	<name>HL7 FHIR Test Cases</name>
@@ -96,6 +96,13 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
+						<configuration>
+							<gpgArguments>
+								<!-- Prevent `gpg` from using pinentry programs -->
+								<arg>--pinentry-mode</arg>
+								<arg>loopback</arg>
+							</gpgArguments>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
