--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,11 @@
 							<goal>sign</goal>
 						</goals>
 						<configuration>
-							<gpgArguments>
-								<!-- Prevent `gpg` from using pinentry programs -->
-								<arg>--pinentry-mode</arg>
-								<arg>loopback</arg>
-							</gpgArguments>
+<!--							<gpgArguments>-->
+<!--								&lt;!&ndash; Prevent `gpg` from using pinentry programs &ndash;&gt;-->
+<!--								<arg>&#45;&#45;pinentry-mode</arg>-->
+<!--								<arg>loopback</arg>-->
+<!--							</gpgArguments>-->
 						</configuration>
 					</execution>
 				</executions>
