--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,8 @@
 							<goal>sign</goal>
 						</goals>
 						<configuration>
-<!--							<gpgArguments>-->
-<!--								&lt;!&ndash; Prevent `gpg` from using pinentry programs &ndash;&gt;-->
-<!--								<arg>&#45;&#45;pinentry-mode</arg>-->
-<!--								<arg>loopback</arg>-->
-<!--							</gpgArguments>-->
+							<keyname>${gpg.keyname}</keyname>
+							<passphraseServerId>${gpg.keyname}</passphraseServerId>
 						</configuration>
 					</execution>
 				</executions>
